--- a/vercel.json
+++ b/vercel.json
@@ -4,18 +4,11 @@
   "public": true,
 
   "builds": [
-    {
-      "src": "api/ors.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "api/quote.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
+    { "src": "api/ors.js", "use": "@vercel/node" },
+    { "src": "api/quote.js", "use": "@vercel/node" },
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "style.css", "use": "@vercel/static" },
+    { "src": "script.js", "use": "@vercel/static" }
   ],
 
   "rewrites": [
@@ -28,43 +21,8 @@
       "destination": "/api/quote.js"
     },
     {
-      "source": "/(.*)",
+      "source": "/((?!api|.*\\.(css|js|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf)).*)",
       "destination": "/index.html"
     }
-  ],
-
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "POST, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Accept" },
-        { "key": "Cache-Control", "value": "no-store" }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" },
-        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
-        { "key": "Permissions-Policy", "value": "camera=(), microphone=(), geolocation=()" },
-        {
-          "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data: https:; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; connect-src 'self' https://api.openrouteservice.org https://api.resend.com"
-        }
-      ]
-    }
-  ],
-
-  "env": {
-    "NODE_ENV": "production"
-  },
-
-  "github": {
-    "enabled": true,
-    "silent": false
-  }
+  ]
 }
