--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,12 @@
   "version": 2,
   "name": "shuttle-payment-system",
   "public": true,
-
+  
   "builds": [
     { "src": "api/ors.js", "use": "@vercel/node" },
-    { "src": "api/quote.js", "use": "@vercel/node" },
-    { "src": "index.html", "use": "@vercel/static" },
-    { "src": "style.css", "use": "@vercel/static" },
-    { "src": "script.js", "use": "@vercel/static" }
+    { "src": "api/quote.js", "use": "@vercel/node" }
   ],
-
+  
   "routes": [
     {
       "src": "/api/ors",
@@ -24,5 +21,11 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
+  ],
+  
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/style.css", "destination": "/style.css" },
+    { "source": "/script.js", "destination": "/script.js" }
   ]
 }
